--- a/.github/workflows/kernel-a13-5-10.yml
+++ b/.github/workflows/kernel-a13-5-10.yml
@@ -7,10 +7,15 @@ permissions:
 on:
   workflow_call:
     inputs:
-
       use_make:
         required: true
         type: boolean
+      more_zram:
+        required: true
+        type: boolean
+      kernelsu_variant:
+        required: true
+        type: string
 
 jobs:
   build-kernels-a13-5-10:
@@ -49,3 +54,5 @@ jobs:
       os_patch_level: ${{ matrix.os_patch_level }}
 
       use_make: ${{ inputs.use_make }}
+      more_zram: ${{ inputs.more_zram }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
