--- a/.github/workflows/kernel-a14-6-1.yml
+++ b/.github/workflows/kernel-a14-6-1.yml
@@ -11,6 +11,12 @@ on:
       use_make:
         required: true
         type: boolean
+      more_zram:
+        required: true
+        type: boolean
+      kernelsu_variant:
+        required: true
+        type: string
 
 jobs:
   build-kernels-a14-6-1:
@@ -67,3 +73,5 @@ jobs:
       os_patch_level: ${{ matrix.os_patch_level }}
 
       use_make: ${{ inputs.use_make }}
+      more_zram: ${{ inputs.more_zram }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
