--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,6 @@ on:
         required: true
         type: boolean
         default: true
-
       release_type:
         description: "Choose Release Type"
         required: true
@@ -21,46 +20,88 @@ on:
           - Actions
           - Pre-Release
           - Release
-        default: Pre-Release
-
+        default: Release
+      kernelsu_variant:
+        description: 'Choose KSU Variant'
+        required: true
+        type: choice
+        options:
+          - WILD
+          - KSU
+          - NEXT
+        default: NEXT
+      more_zram:
+        description: 'Add More ZRAM Algorithms'
+        required: true
+        type: boolean
+        default: true
+      build_android_version:
+        description: 'Choose Android Version'
+        required: true
+        type: choice
+        options:
+          - All
+          - Android 12 (5.10)
+          - Android 13 (5.10)
+          - Android 13 (5.15)
+          - Android 14 (5.15)
+          - Android 14 (6.1)
+          - Android 15 (6.6)
+        default: Android 12 (5.10)
 
 jobs:
   build-a12-5-10:
+    if: ${{ contains(inputs.build_android_version, 'Android 12 (5.10)') || inputs.build_android_version == 'All' }}
     uses: ./.github/workflows/kernel-a12-5-10.yml
     secrets: inherit
     with:
       use_make: ${{ inputs.use_make }}
+      more_zram: ${{ inputs.more_zram }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
 
   build-a13-5-10:
+    if: ${{ contains(inputs.build_android_version, 'Android 13 (5.10)') || inputs.build_android_version == 'All' }}
     uses: ./.github/workflows/kernel-a13-5-10.yml
     secrets: inherit
     with:
       use_make: ${{ inputs.use_make }}
-
+      more_zram: ${{ inputs.more_zram }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
+      
   build-a13-5-15:
+    if: ${{ contains(inputs.build_android_version, 'Android 13 (5.15)') || inputs.build_android_version == 'All' }}
     uses: ./.github/workflows/kernel-a13-5-15.yml
     secrets: inherit
     with:
       use_make: ${{ inputs.use_make }}
+      more_zram: ${{ inputs.more_zram }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
 
   build-a14-5-15:
+    if: ${{ contains(inputs.build_android_version, 'Android 14 (5.15)') || inputs.build_android_version == 'All' }}
     uses: ./.github/workflows/kernel-a14-5-15.yml
     secrets: inherit
     with:
       use_make: ${{ inputs.use_make }}
-
+      more_zram: ${{ inputs.more_zram }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
   build-a14-6-1:
+    if: ${{ contains(inputs.build_android_version, 'Android 14 (6.1)') || inputs.build_android_version == 'All' }}
     uses: ./.github/workflows/kernel-a14-6-1.yml
     secrets: inherit
     with:
       use_make: ${{ inputs.use_make }}
+      more_zram: ${{ inputs.more_zram }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
 
   build-a15-6-6:
+    if: ${{ contains(inputs.build_android_version, 'Android 15 (6.6)') || inputs.build_android_version == 'All' }}
     uses: ./.github/workflows/kernel-a15-6-6.yml
     secrets: inherit
     with:
       use_make: ${{ inputs.use_make }}
-
+      more_zram: ${{ inputs.more_zram }}
+      kernelsu_variant: ${{ inputs.kernelsu_variant }}
   release:
     if: ${{ inputs.release_type == 'Release' || inputs.release_type == 'Pre-Release' }}
     runs-on: ubuntu-latest
@@ -72,9 +113,9 @@ jobs:
       - build-a14-6-1
       - build-a15-6-6
     env:
-      GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       RELEASE_NAME: "GKI Kernels With WKSU & SUSFS v1.5.9"
-      RELEASE_BODY:
+      RELEASE_BODY: ""
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -82,16 +123,32 @@ jobs:
       - name: Get commit hashes and generate commit URLs
         run: |
           GITLAB_OWNER="simonpunk"
-          GITLAB_REPO="susfs4ksu"
-          
-          declare -A BRANCH_MAP=(
-            ["gki_android12_5_10"]="gki-android12-5.10"
-            ["gki_android13_5_10"]="gki-android13-5.10"
-            ["gki_android13_5_15"]="gki-android13-5.15"
-            ["gki_android14_5_15"]="gki-android14-5.15"
-            ["gki_android14_6_1"]="gki-android14-6.1"
-            ["gki_android15_6_6"]="gki-android15-6.6"
-          )
+          GITLAB_REPO="susfs4ksu"          
+          declare -A BRANCH_MAP=()
+
+          if [[ "${{ inputs.build_android_version }}" == "All" ]] || [[ "${{ inputs.build_android_version }}" == "Android 12 (5.10)" ]]; then
+            BRANCH_MAP["gki_android12_5_10"]="gki-android12-5.10"
+          fi
+
+          if [[ "${{ inputs.build_android_version }}" == "All" ]] || [[ "${{ inputs.build_android_version }}" == "Android 13 (5.10)" ]]; then
+            BRANCH_MAP["gki_android13_5_10"]="gki-android13-5.10"
+          fi
+
+          if [[ "${{ inputs.build_android_version }}" == "All" ]] || [[ "${{ inputs.build_android_version }}" == "Android 13 (5.15)" ]]; then
+            BRANCH_MAP["gki_android13_5_15"]="gki-android13-5.15"
+          fi
+
+          if [[ "${{ inputs.build_android_version }}" == "All" ]] || [[ "${{ inputs.build_android_version }}" == "Android 14 (5.15)" ]]; then
+            BRANCH_MAP["gki_android14_5_15"]="gki-android14-5.15"
+          fi
+
+          if [[ "${{ inputs.build_android_version }}" == "All" ]] || [[ "${{ inputs.build_android_version }}" == "Android 14 (6.1)" ]]; then
+            BRANCH_MAP["gki_android14_6_1"]="gki-android14-6.1"
+          fi
+
+          if [[ "${{ inputs.build_android_version }}" == "All" ]] || [[ "${{ inputs.build_android_version }}" == "Android 15 (6.6)" ]]; then
+            BRANCH_MAP["gki_android15_6_6"]="gki-android15-6.6"
+          fi
           
           for var_name in "${!BRANCH_MAP[@]}"; do
             branch_name="${BRANCH_MAP[$var_name]}"
@@ -109,11 +166,30 @@ jobs:
 
       - name: Get KernelSU variant refs and links
         run: |
-          # Get WKSU latest commit from wild branch
-          WKSU_REF=$(git ls-remote "https://github.com/WildKernels/Wild_KSU.git" refs/heads/wild | awk '{print $1}')
-          WKSU_URL="https://github.com/WildKernels/Wild_KSU/commit/$WKSU_REF"
-          echo "WKSU_REF=$WKSU_REF" >> $GITHUB_ENV
-          echo "WKSU_URL=$WKSU_URL" >> $GITHUB_ENV
+          if [[ "${{ inputs.kernelsu_variant }}" == "WILD" ]]; then
+            # Get WKSU latest commit from wild branch
+            KSU_REF=$(git ls-remote "https://github.com/WildKernels/Wild_KSU.git" refs/heads/wild | awk '{print $1}')
+            KSU_URL="https://github.com/WildKernels/Wild_KSU/commit/$KSU_REF"
+            KSU_VARIANT_NAME="Wild KSU"
+            KSU_REPO_NAME="WildKernels/Wild_KSU"
+          elif [[ "${{ inputs.kernelsu_variant }}" == "KSU" ]]; then
+            # Get original KernelSU latest commit from main branch
+            KSU_REF=$(git ls-remote "https://github.com/tiann/KernelSU.git" refs/heads/main | awk '{print $1}')
+            KSU_URL="https://github.com/tiann/KernelSU/commit/$KSU_REF"
+            KSU_VARIANT_NAME="KernelSU"
+            KSU_REPO_NAME="tiann/KernelSU"
+          elif [[ "${{ inputs.kernelsu_variant }}" == "NEXT" ]]; then
+            # Get KernelSU-Next latest commit from main branch
+            KSU_REF=$(git ls-remote "https://github.com/KernelSU-Next/KernelSU-Next.git" refs/heads/main | awk '{print $1}')
+            KSU_URL="https://github.com/KernelSU-Next/KernelSU-Next/commit/$KSU_REF"
+            KSU_VARIANT_NAME="KernelSU-Next"
+            KSU_REPO_NAME="KernelSU-Next/KernelSU-Next"
+          fi
+          
+          echo "KSU_REF=$KSU_REF" >> $GITHUB_ENV
+          echo "KSU_URL=$KSU_URL" >> $GITHUB_ENV
+          echo "KSU_VARIANT_NAME=$KSU_VARIANT_NAME" >> $GITHUB_ENV
+          echo "KSU_REPO_NAME=$KSU_REPO_NAME" >> $GITHUB_ENV
 
       - name: Generate and Create New Tag
         run: |
@@ -138,9 +214,14 @@ jobs:
       - name: Set release body
         run: |
           cat << 'EOF' > release_body.md
+
+          Build Configurations:
+          -> Android Version: ${{ inputs.build_android_version }}
+          -> KernelSU Variant: ${{ inputs.kernelsu_variant }}
+          -> Add More ZRAM Algorithms: ${{ inputs.more_zram }}
       
           Features:
-          -> Wild KSU
+          -> ${{ env.KSU_VARIANT_NAME }}
           -> Multi Manager Support for WKSU Manager & KernelSU-Next Manager (Only Install One)
           -> SUSFS ඞ v1.5.9
           -> Scope-Minimized Manual hooks v1.4
@@ -151,6 +232,7 @@ jobs:
           -> IPSet Support for Advanced Network Filtering
           -> Wireguard Support
           -> BBR Support
+          -> More ZRAM Algorithms
       
           Notes:
           -> SUS SU Mode 2 will show as disabled or not compatble due to non-kprobe hooks and is not needed anymore!
@@ -162,9 +244,10 @@ jobs:
           Managers:
           -> WKSU: https://t.me/Wild_Kernels/26618
           -> Next: https://github.com/KernelSU-Next/KernelSU-Next
+          -> KSU: https://github.com/tiann/KernelSU
           
           Commit Hashes (at the time of release):
-          -> WKSU: [${{ env.WKSU_REF }}](${{ env.WKSU_URL }})
+          -> ${{ env.KSU_VARIANT_NAME }}: [${{ env.KSU_REF }}](${{ env.KSU_URL }})
 
           -> SUSFS4KSU: 
             -> gki-android12-5.10: [${{ env.COMMIT_HASH_gki_android12_5_10 }}](${{ env.COMMIT_URL_gki_android12_5_10 }})
@@ -198,15 +281,3 @@ jobs:
         run: |
           echo "GitHub release created with the following files:"
           ls ./downloaded-artifacts/**/*
-            
-      - name: Send Telegram Notification
-        run: |
-          curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
-            -F chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-            -F message_thread_id="${{ secrets.TELEGRAM_TOPIC_ID_GKI }}" \
-            -F text="
-            🌽 *New Kernel Release Uploaded*  
-            📦 *Repository:* [${{ github.repository }}](https://github.com/${{ github.repository }})  
-            ✏️ *Commit:* [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }})  
-            [🔗 View GitHub Release](https://github.com/${{ github.repository }}/releases/tag/${{ env.NEW_TAG }})" \
-            -F parse_mode="Markdown"
