--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,8 +102,9 @@ jobs:
       use_make: ${{ inputs.use_make }}
       more_zram: ${{ inputs.more_zram }}
       kernelsu_variant: ${{ inputs.kernelsu_variant }}
+  
   release:
-    if: ${{ inputs.release_type == 'Release' || inputs.release_type == 'Pre-Release' }}
+    if: always() && (inputs.release_type == 'Release' || inputs.release_type == 'Pre-Release')
     runs-on: ubuntu-latest
     needs:
       - build-a12-5-10
