--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -181,7 +181,7 @@ jobs:
             KSU_REPO_NAME="tiann/KernelSU"
           elif [[ "${{ inputs.kernelsu_variant }}" == "NEXT" ]]; then
             # Get KernelSU-Next latest commit from main branch
-            KSU_REF=$(git ls-remote "https://github.com/KernelSU-Next/KernelSU-Next.git" refs/heads/main | awk '{print $1}')
+            KSU_REF=$(git ls-remote "https://github.com/KernelSU-Next/KernelSU-Next.git" refs/heads/next | awk '{print $1}')
             KSU_URL="https://github.com/KernelSU-Next/KernelSU-Next/commit/$KSU_REF"
             KSU_VARIANT_NAME="KernelSU-Next"
             KSU_REPO_NAME="KernelSU-Next/KernelSU-Next"
@@ -240,10 +240,18 @@ jobs:
           Module: 
           -> https://github.com/sidex15/ksu_module_susfs
       
-          Managers:
-          -> WKSU: https://t.me/Wild_Kernels/26618
-          -> Next: https://github.com/KernelSU-Next/KernelSU-Next
-          -> KSU: https://github.com/tiann/KernelSU
+          Manager:
+          EOF
+
+          if [[ "${{ inputs.kernelsu_variant }}" == "WILD" ]]; then
+            echo "-> WKSU: https://github.com/WildKernels/Wild_KSU" >> release_body.md
+          elif [[ "${{ inputs.kernelsu_variant }}" == "NEXT" ]]; then
+            echo "-> Next: https://github.com/KernelSU-Next/KernelSU-Next" >> release_body.md
+          elif [[ "${{ inputs.kernelsu_variant }}" == "KSU" ]]; then
+            echo "-> KSU: https://github.com/tiann/KernelSU" >> release_body.md
+          fi
+
+          cat << 'EOF' >> release_body.md
           
           Commit Hashes (at the time of release):
           -> ${{ env.KSU_VARIANT_NAME }}: [${{ env.KSU_REF }}](${{ env.KSU_URL }})
