--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -180,10 +180,10 @@ jobs:
             KSU_VARIANT_NAME="KernelSU"
             KSU_REPO_NAME="tiann/KernelSU"
           elif [[ "${{ inputs.kernelsu_variant }}" == "NEXT" ]]; then
-            # Get KernelSU-Next latest commit from main branch
+            # Get KernelSU Next latest commit from next branch
             KSU_REF=$(git ls-remote "https://github.com/KernelSU-Next/KernelSU-Next.git" refs/heads/next | awk '{print $1}')
             KSU_URL="https://github.com/KernelSU-Next/KernelSU-Next/commit/$KSU_REF"
-            KSU_VARIANT_NAME="KernelSU-Next"
+            KSU_VARIANT_NAME="KernelSU Next"
             KSU_REPO_NAME="KernelSU-Next/KernelSU-Next"
           fi
           
@@ -244,11 +244,11 @@ jobs:
           EOF
 
           if [[ "${{ inputs.kernelsu_variant }}" == "WILD" ]]; then
-            echo "-> WKSU: https://github.com/WildKernels/Wild_KSU" >> release_body.md
+            echo "-> Wild KernelSU: https://github.com/WildKernels/Wild_KSU" >> release_body.md
           elif [[ "${{ inputs.kernelsu_variant }}" == "NEXT" ]]; then
-            echo "-> Next: https://github.com/KernelSU-Next/KernelSU-Next" >> release_body.md
+            echo "-> KernelSU Next: https://github.com/KernelSU-Next/KernelSU-Next" >> release_body.md
           elif [[ "${{ inputs.kernelsu_variant }}" == "KSU" ]]; then
-            echo "-> KSU: https://github.com/tiann/KernelSU" >> release_body.md
+            echo "-> KernelSU: https://github.com/tiann/KernelSU" >> release_body.md
           fi
 
           cat << 'EOF' >> release_body.md
