--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -204,8 +204,10 @@ jobs:
             echo "New tag: $NEW_TAG"
             echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
 
-            git tag $NEW_TAG
-            git push origin $NEW_TAG
+            gh api repos/${{ github.repository }}/git/refs \
+              -f ref="refs/tags/${NEW_TAG}" \
+              -f sha="${GITHUB_SHA}" >> $GITHUB_ENV
+
 
       - name: Download Artifacts
         uses: actions/download-artifact@v4
